<resources>
    <string name="app_name">Grab Food</string>

    <string name="oder_your_food_now">Oder your food Now!</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_forgot_password">Forgot Password?</string>
    <string name="btn_login_signup">Don\'t have an account? Sign Up</string>
    <string name="btn_signup">Sign Up!</string>
    <string name="btn_signup_backTo">Back To Login</string>
    <string name="btn_forgot_password_next">Next</string>
    <string name="txt_forgot_password_heading">Enter Your Registered Mobile Number and Password Below ➤</string>
    <string name="txt_otp_activity_heading">Enter Received OTP Below</string>
    <string name="btn_otp_activity_submit">Reset Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_favorite">Favorite Restaurants</string>
    <string name="menu_history">Oder History</string>
    <string name="menu_qna">FAQs</string>
    <string name="menu_logout">Log Out</string>
    <string name="action_close">close</string>
    <string name="action_open">open</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="restaurant_menu_btn_text">Proceed to Cart</string>
    <string name="menu_cart">My Cart</string>
    <string name="cart_place_oder">Place Oder</string>
    <string name="something_went_wrong">Sorry,Something went wrong!</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="restaurants_list">Restaurants List</string>
    <string name="unknown">Unknown</string>
    <string name="my_profile">My profile</string>
    <string name="my_cart">My Cart</string>
    <string name="oder_history">Oder History</string>
    <string name="frequently_asked">Frequently Asked QnA</string>
    <string name="my_favorite_restaurants">"My Favorite Restaurants"</string>
    <string name="sorry_you_have_not_any_favorite_restaurants">Sorry you have not any favorite restaurants!</string>
    <string name="you_successfully_log_out_from_the_app">You successfully log-out from the app!</string>
    <string name="are_you_sure_to_log_out">Are you sure to log-out!</string>
    <string name="discard">Discard</string>
    <string name="yes">Yes</string>
    <string name="after_clicking_yes_you_will_be">After clicking Yes you will be log out from the App.</string>
    <string name="remove">Remove</string>
    <string name="your_oder_successfully_placed">Your Oder Successfully Placed!</string>
    <string name="sorry_oder_not_placed">Sorry oder not placed!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="otp">Otp</string>
    <string name="na">N/A</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="please_enter_previously_send_otp">Please enter previously send OTP!</string>
    <string name="otp_successfully_send_your_mobile">OTP successfully send your mobile!</string>
    <string name="please_fill_all_the_fields">Please fill all the Fields!</string>
    <string name="powered_by_truly">Powered by Truly</string>
    <string name="deleted_to_your_favorite_restaurants">Deleted to Your Favorite Restaurant!</string>
    <string name="added_to_your_favorite_restaurants">Added  to Your Favorite Restaurant</string>
    <string name="frequently_asked_question">Frequently Asked Question</string>
    <string name="no">%d.</string>
    <string name="okay">Okay</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_item_in_your_cart">There is no item in your Cart!</string>
    <string name="there_is_no_item">There is no item!</string>

    //home tabs
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
</resources>