<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/drawer_menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/drawer_menu_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/drawer_menu_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/drawer_menu_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/drawer_menu_qna"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/menu_qna" />
        <item
            android:id="@+id/drawer_menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>