<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.OTPFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_otp_activity_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textStyle="italic"
            android:text="@string/txt_otp_activity_heading"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_otp_activity_otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_otp_activity_heading"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:endIconMode="clear_text"
            android:hint="@string/otp"
            app:startIconDrawable="@drawable/ic_refresh">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_otp_activity_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_otp_activity_otp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_otp_activity_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_otp_activity_password"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
           android:hint="@string/confirm_password"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_otp_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_otp_activity_confirm_password"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="?colorPrimaryVariant"
            android:textAllCaps="false"
            android:textStyle="italic"
            app:cornerRadius="8dp"
            android:text="@string/btn_otp_activity_submit"
            android:textColor="@color/white" />

    </RelativeLayout>