<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ForgotPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_forgot_activity_logo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/ic_grab_food" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_forgot_activity_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_below="@id/img_forgot_activity_logo"
            android:layout_marginHorizontal="20dp"
            android:text="@string/txt_forgot_password_heading"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_forgot_activity_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_forgot_activity_heading"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:prefixText="+91"
            android:hint="@string/mobile"
            app:startIconDrawable="@drawable/ic_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_forgot_activity_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_forgot_activity_phone_number"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="?colorPrimaryVariant" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_activity_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_forgot_activity_email"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="?colorPrimaryVariant"
            android:text="@string/btn_forgot_password_next"
            android:textAllCaps="false"
            android:textStyle="italic"
            app:cornerRadius="85dp"
            android:textColor="@color/white" />

    </RelativeLayout>